# DDPM_EFDL_hw1

./: README.md  dvc.yaml  get_data.py  main.py  params.yaml  pyproject.toml  utils.py
configs/: config.yaml  train.yaml
configs/model/: ddpm.yaml
configs/writer/: wandb.yaml
logger/: __init__.py  writer.py
modeling/: __init__.py  diffusion.py  training.py  unet.py
tests/: test_model.py  test_pipeline.py
